# starterkit-newtemplate-wagtail

./: Dockerfile  Makefile  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt  setup.bat  setup.py  test.py
.github/workflows/: ci.yaml
ai_agent/: README.md  agent.py
mysite/: audit-ci.json  requirements.txt  urls.py  wsgi.py
mysite/forms/: apps.py  models.py
mysite/home/: apps.py  models.py
mysite/images/: apps.py  models.py
mysite/navigation/: apps.py  models.py
mysite/news/: apps.py  models.py
mysite/search/: views.py
mysite/settings/: base.py  dev.py  production.py
mysite/standardpages/: apps.py  models.py
mysite/users/: apps.py
mysite/utils/: apps.py  blocks.py  cache.py  context_processors.py  models.py  query.py  struct_values.py  wagtail_hooks.py
projects/: admin.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py
static_compiled/css/: main.css
templates/: 404.html  base.html  base_page.html
templates/components/: button.html  card--article.html  card--search.html  card.html  form-field.html  pagination.html  related-pages.html  search.html  skip-link.html  theme-toggle.html
templates/icons/: arrow-right.html  cross.html  hamburger.html  magnifying-glass.html  slash.html
templates/navigation/: breadcrumbs.html  footer.html  header.html
templates/pages/: article_page.html  form_page.html  form_page_landing.html  home_page.html  index_page.html  news_listing_page.html  search_view.html  (+1 more)
wagtail_start/: cli.py
wagtail_start.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+24 files in other folders)
